--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "spaceEx launch details",
   "main": "index.js",
   "scripts": {
-    "start": "yarn build && node index.js",
+    "start": "npm run build && node index.js",
     "build": "webpack --config webpack.config.js",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client  && npm run build --prefix client"
   },
   "author": "Mithun K",
   "license": "MIT",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@babel/register": "^7.8.6",
     "axios": "^0.21.0",
