--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node index.js",
     "build": "webpack --config webpack.config.js",
-    "test": "jest",
+    "test": "jest"
   },
   "author": "Mithun K",
   "license": "MIT",
